<resources>
    <string name="app_name">Poe</string>
    <string name="five_daily_inspirations">Five Daily Inspirations</string>
    <string name="begin_typing">What comes to mind …</string>
    <string name="get_inspired">Get Inspired</string>
    <string name="see_your_work">See your work</string>
    <string name="todo">TODO</string>
    <string name="translate">Translate</string>
    <string name="translate_poetry">Translate Poetry</string>
    <string name="view_your_work">View Your Work</string>
    <string name="exercise_thought">Exercise Thought</string>
    <string name="menu">Menu</string>
    <string name="save_this_draft_to_your_work">Save this draft to Your Work!</string>
    <string name="home">Home</string>
    <string name="save_exercise">Save Exercise</string>
    <string name="what_comes_to_mind">What comes to mind ...</string>
    <string name="read_more">Read more from this artist</string>
</resources>
