<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".ThemePracticeActivity">

   <android.support.v7.widget.RecyclerView
       android:id="@+id/theme_recycler_practice"
       android:layout_width="match_parent"
       android:layout_height="match_parent"/>

   <ImageButton
       android:id="@+id/menu_image"
       android:layout_width="77dp"
       android:layout_height="69dp"
       android:layout_marginEnd="8dp"
       android:layout_marginStart="8dp"
       android:contentDescription="@string/todo"
       android:src="@drawable/poe_icon"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="1.0"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />

   <include layout="@layout/content_main" />

   <View
       android:id="@+id/menuBGLayout"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:background="@color/colorTransBg"
       android:visibility="gone" />

   <LinearLayout
       android:id="@+id/menu_layout_base"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginBottom="16dp"
       android:layout_marginEnd="8dp"
       app:layout_behavior="com.vivianbabiryekulumba.poe.activities.utils.AnimationBehavior"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent">

      <TextView
          android:id="@+id/menu_tab"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/menu"
          android:textColor="#001b61"
          android:textSize="16sp"/>

   </LinearLayout>

   <LinearLayout
       android:id="@+id/tab_layout_1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_behavior="com.vivianbabiryekulumba.poe.activities.utils.AnimationBehavior"
       android:layout_marginBottom="16dp"
       android:layout_marginEnd="8dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent">

      <TextView
          android:id="@+id/tab1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/home"
          android:textColor="#001b61"
          android:textSize="16sp"/>


   </LinearLayout>

   <LinearLayout
       android:id="@+id/tab_layout_2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_behavior="com.vivianbabiryekulumba.poe.activities.utils.AnimationBehavior"
       android:layout_marginBottom="16dp"
       android:layout_marginEnd="8dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent">

      <TextView
          android:id="@+id/tab2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/view_your_work"
          android:textColor="#001b61"
          android:textSize="16sp"/>

   </LinearLayout>

   <LinearLayout
       android:id="@+id/tab_layout_3"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_behavior="com.vivianbabiryekulumba.poe.activities.utils.AnimationBehavior"
       android:layout_marginBottom="16dp"
       android:layout_marginEnd="8dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent">

      <TextView
          android:id="@+id/tab3"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/translate_poetry"
          android:textColor="#001b61"
          android:textSize="16sp"/>

   </LinearLayout>

   <LinearLayout
       android:id="@+id/tab_layout_4"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_behavior="com.vivianbabiryekulumba.poe.activities.utils.AnimationBehavior"
       android:layout_marginBottom="16dp"
       android:layout_marginEnd="8dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent">

      <TextView
          android:id="@+id/tab4"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/save_this_draft_to_your_work"
          android:textColor="#001b61"
          android:textSize="16sp"/>

   </LinearLayout>

</android.support.constraint.ConstraintLayout>